Created pages for adding new items
* No testing whatsoever for the new ftl templates, as per usual
* Created the first page (where name, unit, and weekly restock
  flags are set)
* Created the second page (where PQs are set)
* Added new CSS for tables (I did test this, and it looks quite nice.)

--- a/src/main/resources/public/styles/style.css
+++ b/src/main/resources/public/styles/style.css
@@ -132,3 +132,18 @@ textarea {
     border-style: solid;
     border-color: #fdede8;
 }
+
+table {
+    width: 100%;
+    display: inline-block;
+    box-shadow: 5px 10px 5px #dfdfdf;
+    border: 1px solid black;
+}
+
+tr {
+    height: 32px;
+}
+
+td {
+    padding:15px;
+}
