List page displays items
* But the buttons don't work yet!
* No post route has been set up for it yet, and all of the buttons
  at the bottom just give a 404

--- a/src/main/resources/public/styles/style.css
+++ b/src/main/resources/public/styles/style.css
@@ -78,12 +78,12 @@ input {
     left: 0;
     height: 22px;
     width: 22px;
-    background-color: #fdede8;
+    background-color: #DFDFFF;
     border-radius: 4px;
 }
 
 .container input:checked ~ .checkmark {
-    background-color: #DD4814;
+    background-color: #102399;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
