--- a/src/main/resources/public/styles/style.css
+++ b/src/main/resources/public/styles/style.css
@@ -157,3 +157,18 @@ td.min {
     width: 1%;
     white-space: nowrap;
 }
+
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    color: initial;
+    text-align:center;
+    display: inline-block;
+    width:75%;
+    height: 50px;
+    margin:.4rem;
+    min-width: 200px;
+}
