--- a/src/main/resources/public/styles/style.css
+++ b/src/main/resources/public/styles/style.css
@@ -39,6 +39,15 @@ button {
     border: none; */
 }
 
+button.link {
+    background:none;
+    color:inherit;
+    border:none;
+    padding:0;
+    font: inherit;
+    cursor: pointer;
+ }
+
 div.list {
     text-align:left;
     padding:20px;
